--- a/css/miniStyle.css
+++ b/css/miniStyle.css
@@ -28,8 +28,23 @@ ul{
 li{
     border-top: 2px solid #333;
 }
+
+li a{
+    display: block;
+}
+
 li a,
 li a:visited{
     text-decoration: none;
     color: #333;
+}
+li a:hover,
+li a:focus {
+    background: #333;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+li:last-child a{
+    border-radius: 0 0 2rem 2rem ;
 }
